--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oleo+Script:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oleo+Script:wght@400;700&display=swap");
 .oleo-script-regular {
   font-family: "Oleo Script", system-ui;
   font-weight: 400;
@@ -87,7 +87,7 @@ body {
 .projectsButton.active:hover {
   background-color: #212121 !important;
 }
- .projectsButton.active:active {
+.projectsButton.active:active {
   border: 1px solid #484e53 !important;
   background-color: #484e53 !important;
 }
@@ -144,7 +144,7 @@ p {
 .projectCard {
   background-color: #2f2f2f59;
   border: 1px solid #89898926;
- height: 100%;
+  height: 100%;
 }
 
 .projectCard small {
@@ -170,7 +170,6 @@ p {
   background-color: #484e53 !important;
 }
 
-
 .sectionPading {
   padding-top: 100px;
   padding-bottom: 100px;
@@ -183,9 +182,6 @@ p {
   width: 50%; /* Adjust size as needed */
   height: 50%; /* Adjust size as needed */
 }
-
-
-
 
 .emailButton {
   border: 1px solid #484e53;
@@ -202,4 +198,9 @@ p {
 .emailButton:active {
   border: 1px solid #484e53 !important;
   background-color: #484e53 !important;
+}
+
+a {
+  color: unset;
+
 }
